--- a/index.html
+++ b/index.html
@@ -112,13 +112,15 @@
           Farah Mom & Baby Care menghadirkan perawatan terbaik bagi ibu dan bayi
           Anda.
         </p>
-        <a href="https://wa.me/628128415338" class="btn btn-main"
+        <a
+          href="https:wa.me/628128415338?text=Saya%20ingin%20booking%20treatment%20di%20FMBC%20"
+          class="btn btn-main"
           >Pesan Sekarang</a
         >
       </div>
     </section>
 
-    <!-- Company Profile -->
+    <!-- tentang kami -->
     <section
       id="about"
       class="fade-in py-5 py-md-6"
@@ -753,7 +755,7 @@
             </p>
 
             <a
-              href="https://wa.me/628128415338"
+              href="https://wa.me/628128415338?text=Saya%20ingin%20booking%20treatment%20di%20FMBC%20"
               class="btn btn-main btn-sm wa-footer-btn"
             >
               <i class="fab fa-whatsapp me-1"></i> Pesan Sekarang
@@ -775,9 +777,13 @@
 
     <!-- Floating Buttons -->
     <div class="float-btn">
-      <a href="https://wa.me/628128415338" class="wa" target="_blank"
-        ><i class="fab fa-whatsapp"></i
-      ></a>
+      <a
+        href="https://wa.me/6281284153338?text=Saya%20ingin%20booking%20treatment%20di%20FMBC%20"
+        class="wa-fab"
+        target="_blank"
+      >
+        <i class="fab fa-whatsapp"></i>
+      </a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
